--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,34 +1,17 @@
 ---
 layout: default
-comments: true
 ---
 
-  	{% include partials/navigation/nav-article.html %}
-    <main id="page-main" role="main">
-		<header id="post-header" class="anm-moveFromLeft delay-100">
-				<h1 id="post-title" class="anm-moveFromBottomFade delay-1000">{{ page.title }}</h1>
-		</header>
-		<div>
-			<article id="post-video" class="post anm-fadeIn delay-1000">
-				<div id="entry">
-					<figure id="post-img">
-						<a href="../{{ page.img }}" data-lightbox="roadtrip"><img src="../{{ page.img }}"></a>
-					</figure>
-	    			{{ content }}
-				</div>
-				<em><hr></em>
-				<aside id="post-share">
-					{% include share.html %}
-				</aside>
-				<div id="date">
-    				<p>Publicat el {{ page.date | date: "%e %B , %Y" }}</p>
-  				</div>
-				<em><hr></em>
-					<div>
-						<h3><u>Comentaris</u></h3>
-						{% include disqus.html %}
-					</div>
-  					<hr>
-			</article>
-		</div>
-	</main>
+<article class="post">
+  <h1>{{ page.title }}</h1>
+
+  <div class="entry">
+    {{ content }}
+  </div>
+
+  <div class="date">
+    Written on {{ page.date | date: "%B %e, %Y" }}
+  </div>
+
+  {% include disqus.html %}
+</article>
