--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -11,26 +11,22 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/styles/screen.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/styles/components.css" />
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/styles/adding.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/styles/helpers.css" />
-	{% if page.comments %}<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/styles/adding-blog.css" />{% endif %}
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/styles/adding.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/styles/anime.css" />
-    {% if page.comments %}<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/css/lightbox.min.css" />{% endif %}
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/css/lightbox.min.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     {% include favicons.html %}
 
-	
   </head>
 
   <body>
-		<!-- Theme inputs (invisibles) -->		
-		<input type="radio" id="theme-light" name="theme" aria-hidden="true" hidden>
-		<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
-		<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
-		
 	<!-- Page content -->
 	<div class="page" id="page">
+  	{% include partials/navigation/nav-section.html %}
+  	{% include partials/header-article.html %}
+  	
       {{ content }}
     {% include partials/footer.html %}
 	</div>
@@ -40,16 +36,6 @@
   	<script src="{{ site.baseurl }}/hipertextos/js/jquery.js"></script>
   	<script src="{{ site.baseurl }}/hipertextos/js/icons.js"></script>
   	<script src="{{ site.baseurl }}/hipertextos/js/anime.js"></script>
-  	{% if page.comments %}<script src="{{ site.baseurl }}/hipertextos/js/lightbox.min.js"></script>
-	<script type="text/javascript">
-  		$(document).ready(function() {
-    		$("[href]").each(function() {
-    		    if (this.href == window.location.href) {
-    	        	$(this).addClass("active");
-    	    	}
-    		});
-		});
-  	</script>{% endif %}
-	{% if page.comments %}<script id="dsq-count-scr" src="//isard-miralles.disqus.com/count.js" async></script>{% endif %}
+  	<script src="{{ site.baseurl }}/hipertextos/js/lightbox.min.js"></script>
   </body>
 </html>
