--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/styles/helpers.css" />
 	{% if page.comments %}<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/styles/adding-blog.css" />{% endif %}
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/styles/anime.css" />
-    {% if page.comments %}<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/hipertextos/css/lightbox.min.css" />{% endif %}
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
     {% include favicons.html %}
@@ -40,7 +39,7 @@
   	<script src="{{ site.baseurl }}/hipertextos/js/jquery.js"></script>
   	<script src="{{ site.baseurl }}/hipertextos/js/icons.js"></script>
   	<script src="{{ site.baseurl }}/hipertextos/js/anime.js"></script>
-  	{% if page.comments %}<script src="{{ site.baseurl }}/hipertextos/js/lightbox.min.js"></script>
+  	{% if page.comments %}
 	<script type="text/javascript">
   		$(document).ready(function() {
     		$("[href]").each(function() {
@@ -50,6 +49,5 @@
     		});
 		});
   	</script>{% endif %}
-	{% if page.comments %}<script id="dsq-count-scr" src="//isard-miralles.disqus.com/count.js" async></script>{% endif %}
   </body>
 </html>
