--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -1,7 +1,7 @@
 			<nav id="site-nav" class="nav-smart">
 				<div>
 					<a class="site-logo" href="index.html" title="Videos Manguis: Inicio">
-						<img src="{{ site.baseurl }}/hipertextos/brand/icon.jpg" alt="Videos Manguis logo">
+						<img src="{{ site.avatar }}" alt="Videos Manguis logo">
 					</a>
 					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
 					<strong><label for="mobnav">Menú<mark></mark></label></strong>
