--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -1,6 +1,6 @@
 			<nav id="site-nav" class="nav-smart">
 				<div>
-					<a class="site-logo" href="index.html" title="Videos Manguis: Inicio">
+					<a class="site-logo" href="{{ site.baseurl }}" title="Videos Manguis: Inicio">
 						<img src="{{ site.avatar }}" alt="Videos Manguis logo">
 					</a>
 					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
