--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -87,7 +87,7 @@ img.dialog-svg {width:120px;height:150px;}
 em small #go-up { background:rgba(0,0,0,.1);padding:15px;border-radius:50%; }
 em small #go-up:hover {background:rgba(0,0,0,.3); }
 /* Footer fixed */
-main { margin-bottom: 232px;z-index: 1;background-color: var(--color-white);
+main { margin-bottom: 232px;z-index: 1;
     box-shadow:0 75px 60px rgba(0,0,0,.32);
 }
 #page-footer {position: fixed;box-shadow: inset 0 0 32px rgba(0, 0, 0, .32);bottom: 0px;z-index: -1;width: 100%;}
