--- a/_includes/partials/head.html
+++ b/_includes/partials/head.html
@@ -1,4 +1,5 @@
         <header  id="page-header" class="cover anm-fadeIn delay-300 slow">
 				<h1 class="anm-moveFromBottom delay-300 slow">{{ site.name }}</h1>
 				{% if site.description %}<h2 class="anm-scaleUp delay-500 slow"><small>{{ site.description }}</small></h2>{% endif %}
+				<img id="cover-logo" src="{{ site.baseurl }}/hipertextos/brand/cover.png" alt="Logo Videos Manguis">
 		</header>
