--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 			<article id="post-video" class="post anm-fadeIn delay-1000">
 				<div id="entry">
 					<figure id="post-img">
-						<a href="../{{ page.img }}" data-lightbox="roadtrip"><img src="../{{ page.img }}"></a>
+						<img src="http://img.youtube.com/vi/{{ page.id }}/0.jpg">
 					</figure>
 	    			{{ content }}
 				</div>
