--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -6,7 +6,7 @@
 					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
 					<strong><label for="mobnav">Menú<mark></mark></label></strong>
 					<div hidden>
-						<a href="{{ site.baseurl }}/" title="BarcelonaCSS" id="current-nav">{{ site.name }}</a>
+						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
 						<a href="http://imperio.{{ site.baseurl }}" title="Imperio Vacuno">Imperio</a>
 						<a href="{{ site.baseurl }}/about/" title="Sobre las Vacas Manguis">Nosotras</a>
 						<a href="extras.html" title="Extras">Extras</a>
