--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
 		
 	<!-- Page content -->
 	<div class="page" id="page">
+  	{% include partials/navigation/nav.html %}
       {{ content }}
     {% include partials/footer.html %}
 	</div>
