--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
 			<article id="post-video" class="post anm-fadeIn delay-1000">
 				<div id="entry">
 					<figure id="post-img">
-						<img src="{{ page.id }}">
+						<img src="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
 					</figure>
 	    			{{ content }}
 				</div>
