--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
     <main id="page-main" role="main">
+    	<div id="back-header" class="img-bolo anm-fadeIn delay-600 extra-slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
+		</div>
 		<header id="post-header" class="anm-moveFromLeft delay-100">
 				<h1 id="post-title" class="anm-moveFromBottomFade delay-1000">{{ page.title }}</h1>
 		</header>
