--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,9 @@ layout: default
 		<div>
 			<article id="post-video" class="post anm-fadeIn delay-1000">
 				<div id="entry">
+					<div class="video-post">
+						<figure><iframe width="1280" height="720" src="https://www.youtube.com/embed/{{ page.img }}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></figure>
+					</div>
 					<figure id="post-img">
 						<img src="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
 					</figure>
