--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -8,7 +8,6 @@ text-align: center;}
 #site-nav a {font-weight: lighter;border: none;}
 #site-nav a:visited { color: var(--color-grey);text-decoration: none;}
 #site-nav a:hover, #site-nav a b:hover { color: #fff !important;background: #000;text-decoration: none;}
-#current-nav, #current-nav a:visited, #current-nav:visited {color:#fff !important;}
 #site-nav label {color:var(--color-grey);border:thin solid transparent;}
 #site-nav label:hover {color:var(--color-soft-grey);border:thin solid #353535;}
 .cover h2 { letter-spacing: 0.001em;font-weight: normal; }
@@ -17,7 +16,7 @@ body {text-align: justify;-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:non
 p, ul {font-size: 18px;line-height: 27px;}
 main {padding-bottom:0!important;}
 #page-header.cover {background-image: url("/img/texture/videosmanguis.gif");background-color:var(--color-black);background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
-#cover-logo {position:fixed;top:160px;left:44%;z-index:-1;}
+#cover-logo {position:fixed;top:144px;right:6px;z-index:-1;}
 img#cover-logo {max-width:230px!important;height:auto;}
 .text-left {text-align:left;}
 .text-right {text-align:right;}
