--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
     <main id="page-main" role="main">
-    	<div id="back-header" class="img-bolo banner anm-fadeIn delay-600 extra-slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
+    	<div id="back-header" class="img-bolo head-band anm-fadeIn delay-600 extra-slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 		</div>
-		<header id="post-header" class="banner anm-moveFromLeft delay-100">
+		<header id="post-header" class="head-band anm-moveFromLeft delay-100">
 				<h1 id="post-title" class="anm-moveFromBottomFade delay-1000">{{ page.title }}</h1>
 		</header>
 		<div>
