--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -30,9 +30,9 @@ section.cover-justify p {padding: 6px 18px 0 18px;line-height: 23px;font-size: 1
 .cover#page-header  {background-color: var(--color-white);}
 .serveis-header {border-bottom:10px solid var(--color-hardgrey);background-color: var(--color-black);color: var(--color-hardgrey);}
 .medias#page-header {border-bottom:10px solid var(--color-grey);background-color: var(--color-softgrey);color: var(--color-grey);}
-.head-band {height: 18vh;padding-top: 10px;overflow:hidden!important;}
-.img-bolo#back-header {-webkit-filter:blur(32px);filter:blur(32px);height:100%;min-width:100%;opacity:.75;
-    background-position:;position: top center;position:absolute;top:0;left:0;background-attachment: fixed;background-size: cover;background-repeat: no-repeat;overflow: hidden;text-align: center; }
+.head-band {height: 18vh!important;padding-top: 10px;}
+.img-bolo#back-header {-webkit-filter:blur(32px);filter:blur(32px);max-height:230px;min-width:100%;opacity:.75;
+    background-position:;position: top center;position:absolute;top:0;left:0;background-attachment: fixed;background-size: cover;background-repeat: no-repeat;text-align: center; }
 #icons a {border:thin solid var(--color-soft);background: transparent;border-radius:50%;}
 #icons a:hover {border:thin solid var(--color-blue);}
 figure em a {border:none;border-bottom;line-height:0.2em;padding:12px 4px;}
