--- a/hipertextos/styles/components.css
+++ b/hipertextos/styles/components.css
@@ -13,6 +13,21 @@
 	line-height: 16px;
 }
 
+
+.simple em u a,
+#layout-simple:checked ~ #layout-result em u a {
+    padding: 6px;border: 2px solid var(--color-hardgrey);
+    color: var(--color-hardgrey);border-radius: 40px;
+    width: 210px;margin-top: 23px;}
+.simple em u a :hover,
+#layout-simple:checked ~ #layout-result em u a:hover {
+    color: var(--color-link);border: 2px solid var(--color-link); 
+}
+.simple em u svg,
+#layout-simple:checked ~ #layout-result em u svg {
+    width: 21px;}
+    
+    
 /* Simple view */
 
 .simple article,
