--- a/hipertextos/styles/screen.css
+++ b/hipertextos/styles/screen.css
@@ -1199,6 +1199,7 @@ nav label {
 	--color-softgrey: rgba(220,220,220,1);
 	--color-grey: rgba(150,150,150,1);
 	--color-hardgrey: rgba(90,90,90,1);
+	--color-hard-grey: rgba(40,40,40,1);
 	--color-black: rgba(0,0,0,1);
 	--color-softblack: rgba(10,10,10,1);
 	--color-soft-black: rgba(23,20,21,1);
