--- a/hipertextos/styles/components.css
+++ b/hipertextos/styles/components.css
@@ -52,14 +52,12 @@
 }
 .simple article nav a,
 #layout-simple:checked ~ #layout-result article nav a {
-	background-color: var(--color-link);
-	color: #fff;text-decoration: none;
+	color: currentcolor ;text-decoration: none;
 	height: 69px;
 	line-height: 65px;
 	padding: 0;
 	width: 69px;
 }
-
 .simple em u a,
 #layout-simple:checked ~ #layout-result em u a {
     padding: 6px;border: 2px solid var(--color-hardgrey);
