--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -5,7 +5,7 @@ footer, #follows, #follows-big, #icons, #covers, .nav-scroll, #web-credits, #pag
 text-align: center;}
 /* Nav */
 #site-nav {background: var(--color-soft-black) !important;border-bottom: none;font-size: 17px;color: var(--color-grey);}
-#site-nav a {color:var(--color-grey) ;font-weight: lighter;border: none;}
+#site-nav a {color:var(--color-grey)!important;font-weight: lighter;border: none;}
 #site-nav a:visited { color: var(--color-grey);text-decoration: none;}
 #site-nav a:hover, #site-nav a b:hover { color: var(--color-white);text-decoration: none;}
 #site-nav label {color:var(--color-grey);border:thin solid transparent;}
@@ -32,7 +32,7 @@ section.cover-justify p {padding: 6px 18px 0 18px;line-height: 23px;font-size: 1
 .cover#page-header  {background-color: var(--color-white);}
 .serveis-header {border-bottom:10px solid var(--color-hardgrey);background-color: var(--color-black);color: var(--color-hardgrey);}
 .medias#page-header {border-bottom:10px solid var(--color-grey);background-color: var(--color-softgrey);color: var(--color-grey);}
-.head-band {height: 18vh!important;padding-top: 10px;}
+.head-band {height: 16vh!important;padding-top: 8px;}
 .img-bolo#back-header {-webkit-filter:blur(32px);filter:blur(32px);max-height:230px;min-width:100%;opacity:.75;
     background-position:;position: top center;position:absolute;top:0;left:0;background-attachment: fixed;background-size: cover;background-repeat: no-repeat;text-align: center; }
 #icons a {border:thin solid var(--color-soft);background: transparent;border-radius:50%;}
