--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -34,11 +34,11 @@
 			<div>
 				<section class="thumb-9 anm-moveFromBottomFade delay-200">
 					<h1 class="anm-scaleUpCenter delay-400">
-					<img src="https://avatars0.githubusercontent.com/u/9498876?s=400&u=aee7e89c69bf3dee9903bc85ec6aa33985148325&v=4" id="avatar" class="anm-scaleUp delay-400" rel="Avatar de Isard Miralles">
-					Isard Miralles</h1>
+					<img src="{{ site.avatar }}" id="avatar" class="anm-scaleUp delay-400" rel="Logo Videos Manguis">
+					{{ site.name }}</h1>
 					{{ content }}
 					<br>
-						<h4 class="anm-scaleUp delay-400"><a href="mailto:isardmt@gmail.com">isardmt@gmail.com</a></h4>
+						<h4 class="anm-scaleUp delay-400"><a href="mailto:isardmt@gmail.com">videosmanguis@gmail.com</a></h4>
 					<strong>
 						<em class="anm-scaleUp delay-600"><a href="tel:+34 658973617"><i class="icon-mobile"></i>658973617</a></em>
 						<em class="anm-scaleUp delay-700"><a href="https://www.facebook.com/{{ site.footer-links.facebook }}" target="blank"><i class="icon-facebook"></i> Isard Miralles</a></em>
