--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -1,13 +1,13 @@
 			<nav id="site-nav" class="nav-smart">
 				<div>
-					<a class="site-logo" href="{{ site.baseurl }}" title="Videos Manguis: Inicio">
+					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio">
 						<img src="{{ site.avatar }}" alt="Videos Manguis logo">
 					</a>
 					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
 					<strong><label for="mobnav">Menú<mark></mark></label></strong>
 					<div hidden>
 						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
-						<a href="http://imperio.{{ site.baseurl }}" title="Imperio Vacuno">Imperio</a>
+						<a href="http://imperio.{{ site.baseurl }}/" title="Imperio Vacuno">Imperio</a>
 						<a href="{{ site.baseurl }}/about/" title="Sobre las Vacas Manguis">Nosotras</a>
 						<a href="extras.html" title="Extras">Extras</a>
 						<form action="http://www.google.com/cse"> 
