--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -1,4 +1,4 @@
-			<nav id="site-nav" class="nav-smart">
+			<nav id="site-nav" class="nav-smart sticky-none">
 				<div>
 					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
 					<strong><label for="mobnav">Menú<mark></mark></label></strong>
