--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
     <main id="page-main" role="main">
+    	{% include partials/navigation/nav-article.html %}
     	<div id="back-header" class="img-bolo head-band anm-fadeIn delay-600 extra-slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 		</div>
 		<header id="post-header" class="head-band anm-moveFromLeft delay-100">
