--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -1,13 +1,20 @@
 			<nav id="site-nav" class="nav-smart sticky-none">
 				<div>
+					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio">
+						<img src="{{ site.avatar }}" alt="Videos Manguis logo">
+					</a>
 					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
 					<strong><label for="mobnav">Menú<mark></mark></label></strong>
 					<div hidden>
-					<a href="{{ site.baseurl }}/serveis/" title="Serveis Gráfics">Serveis</a>	
-					<a href="{{ site.baseurl }}/portfoli/" title="Treballs i creacions gràfiques">Portfoli</a>
-					<a href="{{ site.baseurl }}/" title="Pàgina Principal"><b>{{ site.name }}</b></a>
-					<a href="{{ site.baseurl }}/blog/" title="Blog personal" id="current-nav">Blog</a>
-					<a href="{{ site.baseurl }}/about/" title="Informació i Contacte">Contacte</a>	
+						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
+						<a href="http://imperio.{{ site.baseurl }}/" title="Imperio Vacuno">Imperio</a>
+						<a href="{{ site.baseurl }}/about/" title="Sobre las Vacas Manguis">Nosotras</a>
+						<a href="extras.html" title="Extras">Extras</a>
+						<form action="http://www.google.com/cse"> 
+							<input type="hidden" name="cx" value="GoogleCSEID"> 
+							<input type="text" name="q" placeholder="cerca"> 
+							<input type="submit" name="sa" value="·"> 
+						</form>
 					</div>
 				 </div>
 			</nav>
