--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,13 +6,13 @@ layout: default
     <main id="page-main" class="post-dark">
     	<div id="back-header" class="img-bolo head-band anm-fadeIn delay-600 extra-slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 		</div>
-		<header id="post-header" class="head-band anm-moveFromLeft delay-100">
-				<h1 id="post-title" class="anm-moveFromBottomFade delay-1000">{{ page.title }}</h1>
+		<header id="post-header" class="head-band anm-moveFromLeft">
+				<h1 id="post-title" class="anm-moveFromBottomFade delay-1500">{{ page.title }}</h1>
 		</header>
 		<div>
-			<article id="post-video" class="post anm-fadeIn delay-1000">
+			<article id="post-video" class="post anm-fadeIn delay-2000">
 				<div id="entry">
-					<div class="video-post">
+					<div>
 						<figure><iframe width="1280" height="720" src="https://www.youtube.com/embed/{{ page.img }}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></figure>
 					</div>
 					<figure id="post-img">
