--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,8 @@ layout: default
 				<h1 id="post-title" class="anm-moveFromBottomFade delay-1500">{{ page.title }}</h1>
 		</header>
 		<div>
-			<article id="post-video" class="post anm-fadeIn delay-2000">
-				<div id="entry">
+			<article id="post-video" class="post anm-fadeIn">
+				<div id="entry" class="anm-fadeIn delay-2000">
 					<div>
 						<figure><iframe width="1280" height="720" src="https://www.youtube.com/embed/{{ page.img }}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></figure>
 					</div>
