--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -1,7 +1,7 @@
 /* by Isard Miralles  ADDING EXTRA to Blog - CSS */
 /* ------------------------------------------------------------ Resets */
 
-.post-dark#page-main, #page-main.post-dark {color:var(--color-transwhite)!important;text-shadow:1px 2px 2px rgba(0,0,0,.5);
+.post-dark#page-main, .post#post-video {color:var(--color-transwhite)!important;text-shadow:1px 2px 2px rgba(0,0,0,.5);
     background-image: url("/img/texture/asfalt.png");background-size:466px 349px;background-repeat: repeat;image-rendering: crisp-edges;}
 /* Posts */
 #post-title, #date, #post-share {text-align: center;}
