--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
     <main id="page-main" class="post-dark">
 	{% include partials/navigation/nav-article.html %}
-    	<div id="back-header" class="img-bolo head-band anm-fadeIn" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
+    	<div id="back-header" class="img-bolo head-band" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 		</div>
 		<header id="post-header" class="head-band">
 				<h1 id="post-title" class="anm-moveFromBottomFade delay-1500">{{ page.title }}</h1>
