--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 	{% include partials/navigation/nav-article.html %}
     <main id="page-main" class="post-dark">
-    	<div id="back-header" class="img-bolo head-band anm-fadeIn delay-600 extra-slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
+    	<div id="back-header" class="img-bolo head-band anm-fadeIn delay-600" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 		</div>
 		<header id="post-header" class="head-band anm-moveFromLeft slow">
 				<h1 id="post-title" class="anm-moveFromBottomFade delay-1500">{{ page.title }}</h1>
