--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -18,7 +18,7 @@ text-align: center;}
 body {text-align: justify;-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;-o-hyphens:none;hyphens:none;word-wrap:none;}
 p, ul {font-size: 18px;line-height: 27px;}
 main {padding-bottom:0!important;}
-#page-header.cover, #page-main.post-dark {background-image: url("/img/texture/videosmanguis.gif");background-color:var(--color-black);background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
+#page-header.cover {background-image: url("/img/texture/videosmanguis.gif");background-color:var(--color-black);background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
 #page-header.cover h1 {margin-bottom:0px;}
 #cover-logo {position:fixed;top:144px;right:6px;z-index:-1;}
 img#cover-logo {max-width:230px!important;height:auto;}
@@ -32,9 +32,9 @@ p em {border: var(--one-pixel) solid transparent;font-weight: bold;line-height: 
 section.cover-justify p {padding: 6px 18px 0 18px;line-height: 23px;font-size: 16px !important;letter-spacing: .15em}
 /* Page & Header */
 .cover#page-header  {background-color: var(--color-white);}
-.head-band {height: 18vh!important;padding-top: 10px;}
-#back-header {height:18vh!important;overflow:hidden!important;}
-.img-bolo#back-header {-webkit-filter:blur(23px);filter:blur(23px);min-width:100%;
+.head-band {height: 18vh!important;padding-top: 10px;overflow:hidden!important;}
+#back-header {height:18vh!important;overflow:hidden!important;z-index:-100;}
+.img-bolo#back-header {-webkit-filter:blur(23px);filter:blur(23px);min-width:100%;overflow:hidden!important;
     background-position:top;position:absolute;top:0;height:18vh!important;position: top center;background-attachment: fixed;background-size: cover;background-repeat: no-repeat;text-align: center; }
 #icons a {border:thin solid var(--color-soft);background: transparent;border-radius:50%;}
 #icons a:hover {border:thin solid var(--color-blue);}
