--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@ layout: default
     <main id="page-main" class="post-dark">
     	<div id="back-header" class="img-bolo head-band anm-fadeIn delay-600 extra-slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 		</div>
-		<header id="post-header" class="head-band anm-moveFromLeft slow">
-				<h1 id="post-title" class="anm-moveFromBottomFade delay-1500">{{ page.title }}</h1>
+		<header id="post-header" class="head-band anm-moveFromLeft">
+				<h1 id="post-title" class="anm-moveFromTopFade delay-1500">{{ page.title }}</h1>
 		</header>
 		<div>
 			<article id="post-video" class="post anm-fadeIn">
