--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -4,7 +4,7 @@
 .post-dark#page-main, .post#post-video {
     background-image: url("/img/texture/asfalt.png");background-size:466px 349px;background-repeat: repeat;image-rendering: crisp-edges;}
 .post-dark#page-main h6, .post-dark#page-main p {color:var(--color-transwhite)!important;text-shadow:1px 2px 2px rgba(0,0,0,.5);}
-
+.post-dark#post-title h1 {color:var(--color-white);text-shadow:1px 2px 2px rgba(0,0,0,.75);}
 /* Posts */
 #post-title, #date, #post-share {text-align: center;}
 #post-video, #post-download, #post-share, #post-header {border:none;}
