--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,14 +4,14 @@ layout: default
 
 	{% include partials/navigation/nav-article.html %}
     <main id="page-main" class="post-dark">
-    	<div id="back-header" class="img-bolo head-band anm-fadeIn" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
+    	<div id="back-header" class="img-bolo head-band anm-moveFromTop" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 		</div>
-		<header id="post-header" class="head-band anm-moveFromLeft">
-				<h1 id="post-title" class="anm-moveFromTopFade delay-1500">{{ page.title }}</h1>
+		<header id="post-header" class="head-band anm-moveFromTop">
+				<h1 id="post-title" class="anm-moveFromBottomFade delay-500">{{ page.title }}</h1>
 		</header>
 		<div>
-			<article id="post-video" class="post anm-fadeIn">
-				<div id="entry" class="anm-fadeIn delay-2000">
+			<article id="post-video" class="post">
+				<div id="entry" class="anm-fadeIn delay600">
 					<div>
 						<figure>
 							<div>
