--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@
   </head>
 
   <body>
+			<!-- Theme inputs (invisibles) -->		
+		<input type="radio" id="theme-light" name="theme" aria-hidden="true" hidden>
+		<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
+		<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
 		
 	<!-- Page content -->
 	<div class="page" id="page">
