--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,15 +3,15 @@ layout: default
 ---
 
 	{% include partials/navigation/nav-article.html %}
-	<header id="post-header" class="head-band anm-moveFromLeft">
-    <div id="back-header" class="img-bolo head-band anm-fadeIn delay-500" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
+	<header id="post-header" class="head-band anm-moveFromTop">
+    <div id="back-header" class="img-bolo head-band anm-fadeIn delay-1000 slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 	</div>
-			<h1 id="post-title" class="anm-moveFromBottomFade delay-500">{{ page.title }}</h1>
+			<h1 id="post-title" class="anm-moveFromBottomFade delay-700">{{ page.title }}</h1>
 	</header>
     <main id="page-main" class="post-dark">
 		<div>
 			<article id="post-video" class="post">
-				<div id="entry" class="anm-fadeIn delay600">
+				<div id="entry" class="anm-fadeIn delay-1500">
 					<div>
 						<figure>
 							<div>
