--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 	{% include partials/navigation/nav-article.html %}
-	<header id="post-header" class="head-band anm-moveFromTop">
+	<header id="post-header" class="head-band">
     <div id="back-header" class="img-bolo head-band anm-fadeIn delay-1000 slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 	</div>
 			<h1 id="post-title" class="anm-moveFromBottomFade delay-700">{{ page.title }}</h1>
