--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 	<header id="post-header" class="head-band">
     <div id="back-header" class="img-bolo head-band anm-fadeIn delay-1000 slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 	</div>
-			<h1 id="post-title" class="anm-moveFromBottomFade delay-700">{{ page.title }}</h1>
+			<h1 id="post-title" class="anm-moveFromBottomFade delay-700 slow">{{ page.title }}</h1>
 	</header>
     <main id="page-main" class="post-dark">
 		<div>
