--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -4,13 +4,13 @@
 .post-dark#page-main, #post-header {
     background-image: url("/img/texture/asfalt.png");background-size:466px 349px;background-repeat: repeat;image-rendering: crisp-edges;}
 .post-dark#page-main h6, .post-dark#page-main p {color:var(--color-transwhite)!important;text-shadow:1px 2px 2px rgba(0,0,0,.5);}
-.post-dark#post-title h1 {color:var(--color-white)!important;text-shadow:1px 2px 2px rgba(0,0,0,.75);}
+.post-dark#page-main {border-bottom:8px solid var(--color-grey);}
 /* Posts */
 #post-title, #date, #post-share {text-align: center;}
 #post-video, #post-download, #post-share, #post-header {border:none;}
 .post em u a { padding: 6px;border: 2px solid var(--color-grey);color: var(--color-grey);border-radius: 40px;width: 180px;margin-top: 18px;}
 .post em u svg { width: 18px;}
-#post-header {border-bottom: 9px solid var(--color-black);}
+#post-header {color:var(--color-white);border-bottom: 9px solid var(--color-white);text-shadow:1px 2px 7px rgba(0,0,0,.5);}
 #post-img img { border-radius: 50%;height: 210px;float: left;margin: 0 23px 26px 0;object-fit: cover;width: 210px;}
 #post-video {}
 #post-download {}
@@ -23,9 +23,9 @@ figure iframe {width:100%;}
 #post-share em a:hover {background:#fff !important;border:thin solid var(--color-link);}
 #post-share em a:visited {background-color:var(--color-soft-grey)  !important;}
 
-#tw {background:var(--color-green);}
-#fb {background:var(--color-blue);}
-#go {background:var(--color-orange);}
+#tw {background:var(--color-green);border:1px solid var(--color-green);}
+#fb {background:var(--color-blue);border:1px solid var(--color-blue);}
+#go {background:var(--color-orange);border:1px solid var(--color-orange);}
 
 h3 a {color: var(--color-hardgrey) }
 h3 a:hover {color: var(--color-link); text-decoration:none;}
