--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -46,11 +46,14 @@ figure em a {border:none;border-bottom;line-height:0.2em;padding:12px 4px;}
 #page-nav a:hover {border:thin solid rgba(0,0,0,.06);background:rgba(0,0,0,.02);}
 #page-nav a:visited {color: var(--color-grey) ;}
 #page-nav div {height:80px;font-size:15px;}.serveis#page-main {padding:0;}
-/* Covers */
-#covers {color: var(--color-grey);}
-#covers img {width: 13%;margin-bottom:1.2em; }
-#covers article {border:0;}
-#page #covers article {text-shadow:1px 1px 3px rgba(0,0,0,.12);}
+/* nav Scroll */
+.nav-scroll label {font-size: 11px;line-height: 12px;padding: 10px;font-weight: normal;}
+.nav-scroll label b {font-size:25px;line-height:32px;font-weight:lighter;}
+.nav-scroll label:hover {border:thin solid transparent;color:var(--color-black);text-decoration:none;}
+
+/* Suscribe */
+form .button {border:thin solid currentColor;margin-top:0.6em;}
+
 /* Dialog */
 #dialog .icon-alarm svg {max-width:23px!important;}
 #dialog {max-height:80%;overflow:hidden;}
