--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -33,7 +33,7 @@ section.cover-justify p {padding: 6px 18px 0 18px;line-height: 23px;font-size: 1
 /* Page & Header */
 .cover#page-header  {background-color: var(--color-white);}
 .head-band {background-color:#000;height: 18vh!important;padding-top: 10px;overflow:hidden!important;}
-#back-header {height:18vh!important;overflow:hidden!important;z-index:-100;}
+#back-header {height:18vh!important;overflow:hidden!important;}
 .img-bolo#back-header {-webkit-filter:blur(23px);filter:blur(23px);min-width:100%;overflow:hidden!important;
     background-position:top;position:absolute;top:0;height:18vh!important;position: top center;background-attachment: fixed;background-size: cover;background-repeat: no-repeat;text-align: center; }
 #page-header {}
