--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,9 @@ layout: default
 
 	{% include partials/navigation/nav-article.html %}
 	<header id="post-header" class="head-band anm-moveFromLeft slow">
-    <div id="back-header" class="img-bolo head-band anm-fadeIn delay-1000 slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
+    <div id="back-header" class="img-bolo head-band anm-fadeIn delay-1000 extra-slow" style="background-image: url('https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg');">
 	</div>
-			<h1 id="post-title" class="anm-moveFromBottomFade delay-700 slow">{{ page.title }}</h1>
+			<h1 id="post-title" class="anm-moveFromBottomFade delay-800 extra-slow">{{ page.title }}</h1>
 	</header>
     <main id="page-main" class="post-dark">
 		<div>
