--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,12 +40,12 @@
   		<label for="tools-check" data-title="Tools" class="pophover">+</label>
   	</div>
 	<!-- Tools nav -->
-	<input type="checkbox" id="tools-check" name="tools" aria-hidden="true" hidden>
+	<input type="checkbox" id="tools-check" name="Modos" aria-hidden="true" hidden>
 	<nav id="tools-nav">
-		<label for="tools-check" id="label-tools" data-title="Close" class="pophover">x</label>
-		<label for="theme-dark" id="label-dark" data-title="Dark theme" class="pophover"></label>
-		<label for="theme-soft" id="label-soft" data-title="Soft theme" class="pophover"></label>
-		<label for="theme-light" id="label-light" data-title="Light theme" class="pophover"></label>
+		<label for="tools-check" id="label-tools" data-title="Cerrar" class="pophover">x</label>
+		<label for="theme-dark" id="label-dark" data-title="Modo Oscuro" class="pophover"></label>
+		<label for="theme-soft" id="label-soft" data-title="Modo Rojo" class="pophover"></label>
+		<label for="theme-light" id="label-light" data-title="Modo Claro" class="pophover"></label>
 	</nav>
 	{% endif %}
 	
