--- a/hipertextos/styles/adding-about.css
+++ b/hipertextos/styles/adding-about.css
@@ -5,8 +5,8 @@
 #avatar {margin:0 15px 0 0;padding:2px}
 .cover-page #page-header {border-bottom:10px solid var(--color-blue);background-color: var(--color-black);color: var(--color-blue);}
 .cover-page #page-main ul {-webkit-column-count: 3;-moz-column-count: 3;column-count: 3;}
-.cover-page #page-main {color:var(--color-hardgrey);}
-.cover-page aside {border:none;color: var(--color-grey);}
+.cover-page #page-main {color:currentcolor;}
+.cover-page aside {border:none;color: currentcolor;}
 .cover-page  #coffee {  background: var(--color-background);background: -webkit-linear-gradient(red, var(--color-background));background: -moz-linear-gradient(red, var(--color-background)); background: linear-gradient(#eee, var(--color-background));}
 
 @media (max-width: 1250px) {
