--- a/hipertextos/styles/components.css
+++ b/hipertextos/styles/components.css
@@ -34,9 +34,9 @@
 #layout-simple:checked ~ #layout-result article strong {
 	margin: 0;background:var(--color-hard-grey);right:0;padding:6px 12px 9px 12px;position:absolute;margin-top:5px;color:#fff;margin-right: 8px;border-radius: 3px;
 }
-.simple article div,
-#layout-simple:checked ~ #layout-result article div {
-
+.simple article div p,
+#layout-simple:checked ~ #layout-result article div p {
+	max-width:85%;
 }
 .simple article div img,
 #layout-simple:checked ~ #layout-result article div img {
@@ -53,7 +53,7 @@
 .simple article nav a,
 #layout-simple:checked ~ #layout-result article nav a {
 	color: currentcolor ;text-decoration: none;
-	height: 69px;
+	height: 69px;float:right;margin-top:-70px;margin-right:10px;
 	line-height: 65px;
 	padding: 0;
 	width: 69px;
