--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -77,7 +77,7 @@
 
 		<!-- Tools switcher -->  		
   		<div id="tools-switcher">
-  			<label for="tools-check" data-title="Tools" class="pophover">+</label>
+  			<label for="tools-check" data-title="Modos" class="pophover">+</label>
   		</div>
 		<!-- Tools nav -->
 		<input type="checkbox" id="tools-check" name="Modos" aria-hidden="true" hidden>
