--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
   	{% if page.modes %}
 	<!-- Tools switcher -->  		
   	<div id="tools-switcher">
-  		<label for="tools-check" data-title="Tools" class="pophover">+</label>
+  		<label for="tools-check" data-title="Modos" class="pophover">+</label>
   	</div>
 	<!-- Tools nav -->
 	<input type="checkbox" id="tools-check" name="Modos" aria-hidden="true" hidden>
