--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,8 +52,8 @@
     <!-- Scripts
     ================================================== -->
   	<script src="{{ site.baseurl }}/hipertextos/js/jquery.js"></script>
-  	<script src="http://colineberhardt.github.io/jekyll-pagination-infinite-scroll/js/jquery-1.11.1.js"></script>
-	<script src="http://colineberhardt.github.io/jekyll-pagination-infinite-scroll/js/jscroll/jquery.jscroll.js"></script>
+  	<script src="{{ site.baseurl }}/hipertextos/js/jquery-1.11.1.js"></script>
+	<script src="{{ site.baseurl }}/hipertextos/js/infinite-srcoll.js"></script>
 
 	<script type="text/javascript">
 	// content selector is used to extract the additional items 
