--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,8 +57,8 @@
 
 	<script type="text/javascript">
 	// content selector is used to extract the additional items 
-	$('#layout-result').jscroll({
-	    contentSelector: "#layout-result",
+	$('.content').jscroll({
+	    contentSelector: ".content",
 	    nextSelector: '.next'
 	});
 	</script>
