--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
 <ul>
   {% for post in page.tags %}
     <li>
-      <a href="{{ post.url }}">{{ page.tags }}</a>
+      {{ page.tags }}
     </li>
   {% endfor %}
 </ul>
