--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -7,9 +7,9 @@
 					<strong><label for="mobnav">Menú<mark></mark></label></strong>
 					<div hidden>
 						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
-						<a href="http://imperio.{{ site.baseurl }}/" title="Imperio Vacuno">Imperio</a>
+						<a href="{{ site.baseurl }}/category/tags" title="Imperio Vacuno">Categorías</a>
+						<a href="{{ site.baseurl }}/xxx/" title="Extras">Virales</a>
 						<a href="{{ site.baseurl }}/about/" title="Sobre las Vacas Manguis">Nosotras</a>
-						<a href="extras.html" title="Extras">Extras</a>
 						<form action="http://www.google.com/cse"> 
 							<input type="hidden" name="cx" value="GoogleCSEID"> 
 							<input type="text" name="q" placeholder="cerca"> 
