--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
 	    			{{ content }}
 				</div>
 				<em><hr></em>
-				<div class="labels">
+				<div id="labels">
     {% for tag in page.tags %}
       <a href="{{ site.baseurl }}/blog/tags/#{{ tag }}" class="tagged">{{ tag }}</a>
     {% endfor %}
