--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -7,7 +7,7 @@
 					<strong><label for="mobnav">Menú<mark></mark></label></strong>
 					<div hidden>
 						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
-						<a href="{{ site.baseurl }}/category/tags" title="Imperio Vacuno">Categorías</a>
+						<a href="{{ site.baseurl }}/blog/tags" title="Imperio Vacuno">Categorías</a>
 						<a href="{{ site.baseurl }}/xxx/" title="Extras">Virales</a>
 						<a href="{{ site.baseurl }}/about/" title="Sobre las Vacas Manguis">Nosotras</a>
 						<form action="http://www.google.com/cse"> 
