--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
 						</figure>
 					</div>
 					<figure id="post-img">
-						<img src="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
+						<img src="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" rel="{{ page.tags }}">
 					</figure>
 	    			{{ content }}
 				</div>
