--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -18,8 +18,8 @@ text-align: center;}
 body {text-align: justify;-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;-o-hyphens:none;hyphens:none;word-wrap:none;}
 p, ul {font-size: 18px;line-height: 27px;}
 main {padding-bottom:0!important;}
-#page-header.cover {background-image: url("/img/texture/videosmanguis.gif");background-color:var(--color-black);background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
-#page-header.cover h1 {margin-bottom:0px;}
+#page-header.cover, #page-header.page-title {background-image: url("/img/texture/videosmanguis.gif");background-color:var(--color-black);background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
+#page-header.cover h1, #page-header.page-title h1 {margin-bottom:0px;}
 #cover-logo {position:fixed;top:144px;right:6px;z-index:-1;}
 img#cover-logo {max-width:230px!important;height:auto;}
 .text-left {text-align:left;}
@@ -165,4 +165,4 @@ main { padding-top:3px;margin-bottom: 232px;z-index: 1;
 
 @media (max-width: 432px) {
 	#icons a {width:18%;padding:8px;}
-}
+}			
